# sort-buddy

./: .env.dist  .gitignore  LICENSE  README.md  pyproject.toml  run.sh
src/: ai.py  email_fetcher.py  json_email_fetcher.py  main.py  util.py
